fix(game-whack-a-mole): solves an overflow issue

--- a/assets/scss/components/_game-whack-a-mole.scss
+++ b/assets/scss/components/_game-whack-a-mole.scss
@@ -14,6 +14,7 @@
   display: flex;
   align-items: center;
   position: relative;
+  overflow: hidden;
 
   // TODO refactor css or throw away :D
   .game-container {
